# discord-tui

./: .gitignore  ARCHITECTURE.md  CHANGES.md  CODEBASE_ANALYSIS.md  DOCUMENTATION_INDEX.md  FIX_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP.md  START_HERE.md  TESTING_GUILDS.md  app_new.py  config.toml  final_test.py  main.py  pyproject.toml  quick_test.py  requirements.txt  run.sh  run_app.sh  run_with_logging.sh  simple_test.py  test_auth.py  test_guilds.py  test_messages.py  test_render.py  verify_changes.py
discordo/: __init__.py  cmd.py
discordo/cmd/: __init__.py  application.py  cmd.py  guilds_tree.py  login.py  message_input.py  messages_list.py  state.py
discordo/internal/: __init__.py  cache.py  config.py  consts.py  database.py  gateway.py  http_client.py  http_headers.py  keys.py  logger.py  markdown.py  notifications.py  theme.py  transport.py  ui_util.py
